--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "nanoid": "^5.1.6",
     "papaparse": "^5.5.3",
     "pinia": "^3.0.3",
+    "qiankun": "^2.10.16",
     "vitest": "^4.0.1",
     "vue": "^3.5.22"
   },
